prima carta completata e funzionante

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
         <div class="container">
            <div class="row first clearfix">
                 <div class="card">
-                    <div class="photo"></div>
+                    <div class="photo">
+                        <img class="back" src="pattern.png" alt="sfondo della carta">
+                        <img src="air_balloon.png" alt="disegno mongolfiera" id="air_balloon" class="front">
+                        <div class="card-name">Air Balloon</div>
+                    </div>
                 </div>
                 <div class="card">
                     <div class="photo"></div>
