--- a/index.html
+++ b/index.html
@@ -8,66 +8,156 @@
     <title>Memory</title>
 </head>
 <body>
-    <!--zona del titolo-->
-    <header>
-        <h1 class="game-title">MEMORY GAME</h1>
-    </header>
-    <!--zona carte-->
-    <main>
-        <div class="container">
-           <div class="row first clearfix">
-                <div class="card">
-                    <div class="photo">
-                        <img class="back" src="pattern.png" alt="sfondo della carta">
-                        <img src="air_balloon.png" alt="disegno mongolfiera" id="air_balloon" class="front">
-                        <div class="card-name">Air Balloon</div>
+    <div class="wrapper">
+        <!--zona del titolo-->
+        <header>
+            <h1 class="game-title">MEMORY GAME</h1>
+        </header>
+        <!--zona carte-->
+        <main>
+            <div class="container">
+               <div class="row first clearfix">
+                    <div class="card">
+                        <div class="photo">
+                            <img class="back" src="pattern.png"    alt="sfondo della carta">
+                            <img src="air_balloon.png" alt="disegno di una mongolfiera" class="front">
+                            <div class="card-name">Air Balloon</div>
+                        </div>
                     </div>
-                </div>
-                <div class="card">
-                    <div class="photo"></div>
-                </div>
-                <div class="card">
-                    <div class="photo"></div>
-                </div>
-                <div class="card">
-                    <div class="photo"></div>
-                </div>
-           </div>
-           <div class="row second clearfix">
-                <div class="card">
-                    <div class="photo"></div>
-                </div>
-                <div class="card">
-                    <div class="photo"></div>
-                </div>
-                <div class="card">
-                    <div class="photo"></div>
-                </div>
-                <div class="card">
-                    <div class="photo"></div>
-                </div>
-            </div> 
-            <div class="row third clearfix">
-                <div class="card">
-                    <div class="photo"></div>
-                </div>
-                <div class="card">
-                    <div class="photo"></div>
-                </div>
-                <div class="card">
-                    <div class="photo"></div>
-                </div>
-                <div class="card">
-                    <div class="photo"></div>
-                </div>
-           </div>  
-        </div>
-    </main>
-    <!--zona fondo pagina-->
-    <footer>
-
-    </footer>
-
+                    <div class="card">
+                        <div class="photo">
+                            <img class="back" src="pattern.png"   alt="sfondo della carta">
+                            <img src="Tram.png" 
+                            alt="disegno di un tram" 
+                            class="front">
+                            <div class="card-name">
+                                Tram
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="photo">
+                            <img class="back" src="pattern.png"   alt="sfondo della carta">
+                            <img src="Bicycle.png" 
+                            alt="disegno bicicletta" 
+                            class="front">
+                            <div class="card-name">
+                                Bicycle
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="photo">
+                            <img class="back" src="pattern.png"    alt="sfondo della carta">
+                            <img src="Cruise_ship.png" 
+                            alt="disegno nave da crociera" 
+                            class="front">
+                            <div class="card-name">
+                                Cruise ship
+                            </div>
+                        </div>
+                    </div>
+               </div>
+               <div class="row second clearfix">
+                    <div class="card">
+                        <div class="photo">
+                            <img class="back" src="pattern.png"   alt="sfondo della carta">
+                            <img src="Submarine.png" 
+                            alt="disegno di un sottomarino" 
+                            class="front">
+                            <div class="card-name">
+                                Submarine
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="photo">
+                            <img class="back" src="pattern.png"    alt="sfondo della carta">
+                            <img src="air_balloon.png" 
+                            alt="disegno di una mongolfiera" 
+                            class="front">
+                            <div class="card-name">
+                                Air Balloon
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="photo">
+                            <img class="back" src="pattern.png"    alt="sfondo della carta">
+                            <img src="Submarine.png" 
+                            alt="disegno di un sottomarino" 
+                            class="front">
+                            <div class="card-name">
+                                Submarine
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="photo">
+                            <img class="back" src="pattern.png"    alt="sfondo della carta">
+                            <img src="Tractor.png" 
+                            alt="disegno di un trattore" 
+                            class="front">
+                            <div class="card-name">
+                                Tractor
+                            </div>
+                        </div>
+                    </div>
+                </div> 
+                <div class="row third clearfix">
+                    <div class="card">
+                        <div class="photo">
+                            <img class="back" src="pattern.png"    alt="sfondo della carta">
+                            <img src="Bicycle.png" 
+                            alt="disegno di una bicicletta" 
+                            class="front">
+                            <div class="card-name">
+                                Bicycle
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="photo">
+                            <img class="back" src="pattern.png"    alt="sfondo della carta">
+                            <img src="Tractor.png" 
+                            alt="disegno di un trattore" 
+                            class="front">
+                            <div class="card-name">
+                                Tractor
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="photo">
+                            <img class="back" src="pattern.png"   alt="sfondo della carta">
+                            <img src="Cruise_ship.png" 
+                            alt="disegno di una nave da crociera" 
+                            class="front">
+                            <div class="card-name">
+                                Cruise ship
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="photo">
+                            <img class="back" src="pattern.png"    alt="sfondo della carta">
+                            <img src="Tram.png" 
+                            alt="disegno di un tram" 
+                            class="front">
+                            <div class="card-name">
+                                Tram
+                            </div>
+                        </div>
+                    </div>
+               </div>  
+            </div>
+        </main>
+        <!--zona fondo pagina-->
+        <footer>
+            <span><strong>from Team Boolean</strong></span>
+        </footer>
+    </div>    
+    
     
 </body>
 </html>
