corretto errore carta scoperta Progetto Completato

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                <div class="row first clearfix">
                     <div class="card">
                         <div class="photo">
-                            <img class="back" src="pattern.png"    alt="sfondo della carta">
+                            <img class="back" src="pattern.png"   alt="sfondo della carta">
                             <img src="air_balloon.png" alt="disegno di una mongolfiera" class="front">
                             <div class="card-name">Air Balloon</div>
                         </div>
@@ -48,7 +48,7 @@
                     </div>
                     <div class="card">
                         <div class="photo">
-                            <img class="back" src="pattern.png"    alt="sfondo della carta">
+                            <img class="back" src="pattern.png"   alt="sfondo della carta">
                             <img src="Cruise_ship.png" 
                             alt="disegno nave da crociera" 
                             class="front">
@@ -72,18 +72,17 @@
                     </div>
                     <div class="card">
                         <div class="photo">
-                            <img class="back" src="pattern.png"    alt="sfondo della carta">
                             <img src="air_balloon.png" 
                             alt="disegno di una mongolfiera" 
-                            class="front">
-                            <div class="card-name">
+                            class="front always_visible">
+                            <div class="card-name always_visible">
                                 Air Balloon
                             </div>
                         </div>
                     </div>
                     <div class="card">
                         <div class="photo">
-                            <img class="back" src="pattern.png"    alt="sfondo della carta">
+                            <img class="back" src="pattern.png"   alt="sfondo della carta">
                             <img src="Submarine.png" 
                             alt="disegno di un sottomarino" 
                             class="front">
@@ -94,7 +93,7 @@
                     </div>
                     <div class="card">
                         <div class="photo">
-                            <img class="back" src="pattern.png"    alt="sfondo della carta">
+                            <img class="back" src="pattern.png"   alt="sfondo della carta">
                             <img src="Tractor.png" 
                             alt="disegno di un trattore" 
                             class="front">
@@ -107,7 +106,7 @@
                 <div class="row third clearfix">
                     <div class="card">
                         <div class="photo">
-                            <img class="back" src="pattern.png"    alt="sfondo della carta">
+                            <img class="back" src="pattern.png"   alt="sfondo della carta">
                             <img src="Bicycle.png" 
                             alt="disegno di una bicicletta" 
                             class="front">
@@ -118,7 +117,7 @@
                     </div>
                     <div class="card">
                         <div class="photo">
-                            <img class="back" src="pattern.png"    alt="sfondo della carta">
+                            <img class="back" src="pattern.png"   alt="sfondo della carta">
                             <img src="Tractor.png" 
                             alt="disegno di un trattore" 
                             class="front">
@@ -140,7 +139,7 @@
                     </div>
                     <div class="card">
                         <div class="photo">
-                            <img class="back" src="pattern.png"    alt="sfondo della carta">
+                            <img class="back" src="pattern.png"   alt="sfondo della carta">
                             <img src="Tram.png" 
                             alt="disegno di un tram" 
                             class="front">
@@ -156,8 +155,6 @@
         <footer>
             <span><strong>from Team Boolean</strong></span>
         </footer>
-    </div>    
-    
-    
+    </div>       
 </body>
 </html>
